AuthServiceUpdated