@@ -1,24 +1,14 @@
 package com.room.app.controller;
 
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import org.springframework.beans.factory.annotation.Autowired;
+import javax.naming.AuthenticationException;
+
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.BadCredentialsException;
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.AuthenticationException;
-import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.security.core.userdetails.UserDetailsService;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -29,137 +19,63 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
-import com.room.app.config.JwtUtil;
 import com.room.app.dto.ForgotPasswordRequest;
 import com.room.app.dto.ResetPasswordRequest;
 import com.room.app.dto.UserResponse;
 import com.room.app.entity.User;
 import com.room.app.exception.OTPException;
 import com.room.app.exception.ResourceNotFoundException;
-import com.room.app.service.OTPService;
-import com.room.app.service.UserService;
+import com.room.app.service.AuthService;
 
-import jakarta.servlet.http.Cookie;
-import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-import jakarta.servlet.http.HttpSession;
 import jakarta.validation.Valid;
-import jakarta.ws.rs.core.HttpHeaders;
 
 @RestController
 @RequestMapping("/auth")
 @CrossOrigin(origins = "http://localhost:3000")
 public class AuthController {
 
-	private UserDetailsService userDetailsService;
-    private PasswordEncoder passwordEncoder;
-    private JwtUtil jwtUtil;
-    private UserService userService;
-    private OTPService otpService;
-    private AuthenticationManager authenticationManager;
+    private final AuthService authService;
 
-    @Autowired
-    public void setUserDetailsService(UserDetailsService userDetailsService) {
-        this.userDetailsService = userDetailsService;
+    public AuthController(AuthService authService) {
+        this.authService = authService;
     }
-
-    @Autowired
-    public void setPasswordEncoder(PasswordEncoder passwordEncoder) {
-        this.passwordEncoder = passwordEncoder;
-    }
-
-    @Autowired
-    public void setJwtUtil(JwtUtil jwtUtil) {
-        this.jwtUtil = jwtUtil;
-    }
-
-    @Autowired
-    public void setUserService(UserService userService) {
-        this.userService = userService;
-    }
-
-    @Autowired
-    public void setOtpService(OTPService otpService) {
-        this.otpService = otpService;
-    }
-
-    @Autowired
-    public void setAuthenticationManager(AuthenticationManager authenticationManager) {
-        this.authenticationManager = authenticationManager;
-    }
-
 
     @PostMapping("/login")
-    public ResponseEntity<?> login(@RequestBody User user) {
+    public ResponseEntity<?> login(@RequestBody User user) throws AuthenticationException {
         try {
-            // Authenticate using Spring Security's authentication manager
-            Authentication authentication = authenticationManager
-                .authenticate(new UsernamePasswordAuthenticationToken(user.getEmail(), user.getPassword()));
-
-            // Get the UserDetails object
-            UserDetails userDetails = (UserDetails) authentication.getPrincipal();
-            
-            // Load your custom User object from the database
-            User customUser = userService.findByEmail(user.getEmail());
-
-            String role = userDetails.getAuthorities().stream()
-                .findFirst()
-                .map(GrantedAuthority::getAuthority)
-                .orElse("ROLE_USER")
-                .replace("ROLE_", "");
-
-            String token = jwtUtil.generateToken(userDetails);
-
+            Map<String, Object> response = authService.login(user);
             return ResponseEntity.ok()
-                .header(HttpHeaders.AUTHORIZATION, "Bearer " + token)
-                .body(Map.of(
-                    "token", token,
-                    "email", userDetails.getUsername(),
-                    "name", customUser.getName(), // Get name from your custom User object
-                    "role", role
-                ));
+                .header("Authorization", "Bearer " + response.get("token"))
+                .body(response);
         } catch (BadCredentialsException e) {
             return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("Invalid email or password");
-        } catch (AuthenticationException e) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("Authentication failed");
         }
     }
 
     @PostMapping("/register")
     public ResponseEntity<Map<String, String>> register(@RequestBody User user) {
-        Map<String, String> response = new HashMap<>();
         try {
-            userService.register(user);
-            response.put("status", "success");
-            response.put("message", "User registered successfully");
-            return ResponseEntity.ok(response);
+            return ResponseEntity.ok(authService.register(user));
         } catch (Exception e) {
-            response.put("status", "failed");
-            response.put("message", e.getMessage());
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(response);
+            return ResponseEntity.badRequest().body(Map.of(
+                "status", "failed",
+                "message", e.getMessage()
+            ));
         }
     }
 
     @PostMapping("/forgot-password")
     public ResponseEntity<Map<String, String>> forgotPassword(@Valid @RequestBody ForgotPasswordRequest request) {
         try {
-            // Check if user exists
-            if (!userService.existsByEmail(request.getEmail())) {
-                return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of(
-                    "status", "error",
-                    "message", "Email not registered"
-                ));
-            }
-            
-            String otp = otpService.generateOTP(request.getEmail());
-            otpService.sendOTPEmail(request.getEmail(), otp);
-            
-            return ResponseEntity.ok(Map.of(
-                "status", "success",
-                "message", "OTP sent to your email"
-            ));
+            return ResponseEntity.ok(authService.forgotPassword(request));
         } catch (OTPException e) {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(Map.of(
+                "status", "error",
+                "message", e.getMessage()
+            ));
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of(
                 "status", "error",
                 "message", e.getMessage()
             ));
@@ -169,19 +85,11 @@ public class AuthController {
     @PostMapping("/reset-password")
     public ResponseEntity<Map<String, String>> resetPassword(@Valid @RequestBody ResetPasswordRequest request) {
         try {
-            if (!otpService.validateOTP(request.getEmail(), request.getOtp())) {
-                return ResponseEntity.badRequest().body(Map.of(
-                    "status", "error",
-                    "message", "Invalid or expired OTP"
-                ));
-            }
-            
-            userService.updatePassword(request.getEmail(), request.getNewPassword());
-            otpService.clearOTP(request.getEmail());
-            
-            return ResponseEntity.ok(Map.of(
-                "status", "success",
-                "message", "Password updated successfully"
+            return ResponseEntity.ok(authService.resetPassword(request));
+        } catch (OTPException e) {
+            return ResponseEntity.badRequest().body(Map.of(
+                "status", "error",
+                "message", e.getMessage()
             ));
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(Map.of(
@@ -191,45 +99,19 @@ public class AuthController {
         }
     }
     
-
     @PostMapping("/logout")
-    public ResponseEntity<Map<String, String>> logout(HttpServletRequest request, HttpServletResponse response) {
-        HttpSession session = request.getSession(false);
-        if (session != null) {
-            session.invalidate();
-        }
-
-        Cookie cookie = new Cookie("JSESSIONID", null);
-        cookie.setPath("/");
-        cookie.setMaxAge(0);
-        cookie.setHttpOnly(true);
-        response.addCookie(cookie);
-
-        SecurityContextHolder.clearContext();
-
-        return ResponseEntity.ok(Map.of(
-            "status", "success",
-            "message", "Logged out successfully"
-        ));
+    public ResponseEntity<Map<String, String>> logout(HttpServletResponse response) {
+        return ResponseEntity.ok(authService.logout());
     }
 
     @GetMapping("/me")
     public ResponseEntity<Map<String, Object>> getUserDetails() {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        if (authentication == null || !authentication.isAuthenticated()) {
+        try {
+            return ResponseEntity.ok(authService.getCurrentUserDetails());
+        } catch (SecurityException e) {
             return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
-                    .body(Collections.singletonMap("error", "Unauthorized"));
+                    .body(Map.of("error", "Unauthorized"));
         }
-
-        String email = authentication.getName();
-        User user = (User) userDetailsService.loadUserByUsername(email);
-
-        Map<String, Object> response = new HashMap<>();
-        response.put("email", user.getEmail());
-        response.put("name", user.getName());
-        response.put("role", user.getRole().replace("ROLE_", ""));
-
-        return ResponseEntity.ok(response);
     }
 
     @PreAuthorize("hasAuthority('ROLE_ADMIN')")
@@ -237,11 +119,11 @@ public class AuthController {
     public ResponseEntity<UserResponse> updateUserRole(
             @PathVariable Long userId,
             @RequestParam String newRole) throws ResourceNotFoundException {
-        return ResponseEntity.ok(userService.updateUserRole(userId, newRole));
+        return ResponseEntity.ok(authService.updateUserRole(userId, newRole));
     }
 
     @GetMapping("/users")
     public ResponseEntity<List<UserResponse>> getAllUsers() {
-        return ResponseEntity.ok(userService.getAllUsers());
+        return ResponseEntity.ok(authService.getAllUsers());
     }
 }
